fix: resolve flyway migration strategy, cors prod validation, redis deserialization, and playwright csp